# Scry

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
scry/: __init__.py  __main__.py  errors.py  lexer.py  parser.py  tokens.py  types.py
tests/: test.scry
